codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: active_combined
---
↳ Interacted with background terminal · just fix
  └ pwd
