codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__unified_exec_waiting_multiple_empty_after.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• Waited for background terminal · just fix
