codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__user_prompt_submit_app_server_hook_notifications_render_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 12789
expression: combined
---
• Running UserPromptSubmit hook: checking go-workflow input policy

UserPromptSubmit hook (stopped)
  warning: go-workflow must start from PlanMode
  stop: prompt blocked
